# office-headless

./: .flake8  .mypy.ini  .travis.yml  README.md  doc2pdf.py  doc2print.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
loutils/: __init__.py  convert.py  find.py  print.py
src/loutils/: __init__.py  __main__.py  convert.py  doc2pdf.py  doc2print.py  find.py  print.py
src/loutils/tests/: test_mod.py
