[metadata]
name = loutils
version = 1.1.0
author = Michael Hirsch, Ph.D.
description = Cross-platform LibreOffice document conversion and printing
url = https://github.com/scivision/libreoffice-utils
keywords =
  libreoffice
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =

[options.extras_require]
tests =
  flake8
  mypy

[options.entry_points]
console_scripts =
  doc2pdf = doc2pdf:main
  doc2print = doc2print:main