[metadata]
name = loutils
version = 1.4.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Cross-platform LibreOffice document conversion and printing
url = https://github.com/scivision/libreoffice-utils
keywords =
  libreoffice
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
install_requires =
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
